# qt_task3_threads

./: CMakeLists.txt  convert.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  thread.cpp  thread.h
